@@ -311,3 +311,12 @@ qgamma.R <- function(p, alpha, scale = 1, lower.tail = TRUE, log.p = FALSE,
     }
     return (x)
 }## qgamma.R()
+
+## R interface to C level gamma() variants   <==> ../src/gamma-variants.c
+gammaVer <- function(x, version, traceLev = 0L) {
+    ## TODO: iver <- pmatch(version, c("...", "..",)) or via match.arg()
+    stopifnot(is.integer(iver <- as.integer(version)), 1 <= iver, iver <= 5,
+              is.integer(traceLev <- as.integer(traceLev)), 0 <= traceLev)
+    ## here version needs to be integer: currently in 1..5
+    .Call(C_R_gamma_ver, x, version, traceLev)
+}
